# Viewshading-app

./: .gitignore  AGENTS.md  README.md  ROADMAP.md  build.gradle.kts  gradlew  gradlew.bat  secrets.properties.template  settings.gradle.kts
.github/workflows/: android-build.yml  build.yml
app/: build.gradle.kts
app/src/experimental_archive/: AccessibilityHelper.kt  AdvancedTerrainViz.kt  AnnotationManager.kt  ArDisturbanceControls.kt  ArTerrainOverlay.kt  ArViewHelper.kt  CompassHelper.kt  DemDataSources.kt  ElevationProfileTool.kt  FieldDataForms.kt  GroundDisturbanceDetector.kt  HillshadeControls.kt  HillshadeProcessor.kt  HistoricalMapOverlay.kt  LidarClassifier.kt  LidarPointCloudRenderer.kt  LocalDemLoader.kt  PerformanceMonitor.kt  PhotoGeotagHelper.kt  PhotogrammetryProcessor.kt  RealTimeCollaboration.kt  TerrainVisualizationControls.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  viewshed_vulkan.cpp
app/src/main/res/drawable/: ic_launcher.xml  (+1 more)
backend/: .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
backend/app/: collaboration.py  main.py  models.py  terrain_api.py  viewshed.py
backend/deploy/oci/: README.md  cloud-init.yaml  oci-checklist.md  setup-on-vm.sh
backend/scripts/: run-local.ps1
backend/tests/: test_viewshed.py  test_viewshed_math.py
docs/: EXPERIMENTAL_FEATURES.md  FIELD_EXPORT_FORMATS.md  MAPS_SETUP.md  PHASE_3_5.md  VULKAN_COMPUTE_INTEGRATION.md
scripts/: android-cli-build.ps1  android-cli-describe.ps1  android-cli-run.ps1
src/main/cpp/: CMakeLists.txt  native-lib.cpp
(+86 files in other folders)
